wrong answer and revert

--- a/daemons/opcxmlda/client/Makefile
+++ b/daemons/opcxmlda/client/Makefile
@@ -36,7 +36,7 @@ DISTNAME      = opcxmlda_client1.0.0
 DISTDIR = /home/lehrig/cc/priv/pvbaddon/daemons/opcxmlda/client/.tmp/opcxmlda_client1.0.0
 LINK          = g++
 LFLAGS        = -static-libgcc -Wl,-O1
-LIBS          = $(SUBLIBS) -lpthread ../../../foreign/csoap/libsoap-1.1.0/libsoap.a /usr/lib64/libxml2.so.2 /usr/lib/librllib.so -lm
+LIBS          = $(SUBLIBS) -lpthread ../../../foreign/csoap/libsoap-1.1.0/libsoap.a /usr/lib64/libxml2.so.2 /usr/lib/librllib.so
 AR            = ar cqs
 RANLIB        = 
 SED           = sed
